src/test/ui/parser/keyword-mut-as-identifier.stderr
error: expected identifier, found `=`
  --> $DIR/keyword-mut-as-identifier.rs:4:13
   |
LL |     let mut = "foo"; //~ error: expected identifier, found `=`
   |             ^ expected identifier

error: aborting due to previous error

